--- a/development/terminalfour/src/html/includes/newsroomHomepageIncludes/header-includes.html
+++ b/development/terminalfour/src/html/includes/newsroomHomepageIncludes/header-includes.html
@@ -13,8 +13,8 @@
 
   <link rel="stylesheet" type="text/css" href="https://cloud.typography.com/7291556/7343172/css/fonts.css" />
   <link rel="stylesheet" type="text/css" href="https://cloud.typography.com/7291556/6990192/css/fonts.css" /> <!-- test Gotham font -->
-  <link href="style-assets/media/fonts/font-awesome/css/font-awesome.min.css" rel="stylesheet" media="screen" />
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
+  <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+  <!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous"> -->
   <link rel="stylesheet" href="style-assets/css/newsroom-style.css" />
   <!-- <link rel="stylesheet" href="<t4 type="media" formatter="path/*" id="146559" />" /> -->
   <script src="style-assets/lib/jquery/jquery.min.js"></script>
@@ -25,4 +25,3 @@
 </style> -->
 
 </head>
-    <body style="padding-top: 0px;">
