--- a/development/terminalfour/src/html/includes/newsroomHomepageIncludes/newsroomNav.html
+++ b/development/terminalfour/src/html/includes/newsroomHomepageIncludes/newsroomNav.html
@@ -1,49 +1,6 @@
-<!-- <div class="top-banner">
-  <img src="style-assets/media/newsroom-redesign/insider-header-background.png" alt="Insider Banner">
-</div> -->
 
-<!-- Desktop nav -->
-<nav id="main-news-nav" class="navbar navbar-default hidden-xs hidden-sm">
-  <div id="newsroom-nav" class="container-fluid newsroom-nav-container news-overlay">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div id="nav-header" class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-1" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a href="/" class="navbar-brand">
-        <img id="newsroom-logo" src="style-assets/media/newsroom-redesign/red_logo.svg" alt="Newsroom Logo">
-      </a>
-    </div>
-
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="navbar-collapse-1">
-      <!-- <ul class="nav navbar-nav">
-      </ul> -->
-      <ul id="nav-left" class="nav navbar-nav navbar-left">
-        <h3 id="nav-h3"><bold>R</bold>elevant. <bold>E</bold>ssential. <bold>D</bold>enver.</h3>
-        <li><a href="/all-stories" class="underline-link">All Stories</a></li>
-        <li style="padding-right: 0px;"><a href="/topics" class="underline-link">Trending Topics</a></li>
-      </ul>
-      <form id="nav-right" class="navbar-form navbar-right">
-        <div class="input-group">
-          <input type="text" class="form-control" placeholder="Search Red">
-          <span class="input-group-btn">
-            <div class="form-group">
-              <button class="btn btn-default" type="button"><span class="fa fa-search fa-2x"></span></button>
-            </div>
-          </span>
-        </div><!-- /input-group -->
-      </form>
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
-</nav>
-
-
-<!-- Mobile nav  -->
-<nav id="" class="navbar navbar-default visible-xs visible-sm">
+<!-- Navigation  -->
+<nav id="" class="navbar navbar-default navbar-fixed-top">
   <div id="" class="container-fluid newsroom-mobile-container">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
@@ -54,15 +11,19 @@
         <span class="icon-bar"></span>
       </button>
       <a href="#" class="navbar-brand">
-        <img id="" src="style-assets/media/newsroom-redesign/red_logo.svg" alt="Newsroom Logo">
+        <img id="" src="style-assets/media/newsroom-redesign/red_logo.svg" alt="Newsroom Logo" style="float:left">
+        <!-- <img id="" src="<t4 type="media" formatter="path/*" id="149184" />" alt="RED Logo" style="float:left"> -->
+        <!-- <bold>R</bold>elevant. <bold>E</bold>ssential. <bold>D</bold>enver. -->
       </a>
+
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="navbar-collapse-2">
       <ul id="" class="nav navbar-nav navbar-left">
-        <li><a href="#" class="underline-link">All Stories</a></li>
-        <li style="padding-right: 0px;"><a href="#" class="underline-link">Trending Topics</a></li>
+        <h3 id="nav-h3"><bold>R</bold>elevant. <bold>E</bold>ssential. <bold>D</bold>enver.</h3>
+        <li><a href="/all-stories" class="underline-link">All Stories</a></li>
+        <li style="padding-right: 0px;"><a href="/topics" class="underline-link">Trending Topics</a></li>
       </ul>
       <form id="" class="navbar-form navbar-right">
         <div class="input-group">
