--- a/development/terminalfour/src/sass/newsroomHomepage/newsroom-articles.scss
+++ b/development/terminalfour/src/sass/newsroomHomepage/newsroom-articles.scss
@@ -6,7 +6,7 @@
 				padding-top: 45px;
 				padding-bottom: 45px;
 				img {
-					width: 100%;
+						width: 100%;
 				    height: 100%;
 				    height: 250px;
 				    object-fit: cover;
@@ -20,13 +20,13 @@
 			    	padding-top: 35px;
 			    }
 			    h3 {
-			    	font-size: 24px;
+			    	font-size: 22px;
 			    	font-weight: 700;
-			    	letter-spacing: none;
+			    	// letter-spacing: none;
 			    	color: #00447C;
 			    }
 			    p {
-			    	font-size: 20px;
+			    	font-size: 18px;
 			    	font-weight: 500;
 			    	letter-spacing: none;
 			    	text-align: left;
@@ -34,16 +34,6 @@
 			}
 			.article-cta {
 				float: none;
-				button {
-					// font-size: 16px;
-					// padding: 20px 16px;
-					// margin-top: 20px;
-			  //       background: $msu-red;
-			  //       color: #ffffff;
-			  //       width: 100%;
-			  //       font-weight: 700;
-			  //       border-radius: 0px;
-				}
 			}
 		}
 	}
