--- a/development/terminalfour/src/sass/newsroomHomepage/newsroom-nav.scss
+++ b/development/terminalfour/src/sass/newsroomHomepage/newsroom-nav.scss
@@ -16,6 +16,18 @@ nav {
 	background: $msu-red;
 	font-weight: 700;
 	height: 100px;
+
+	.navbar-nav {
+		h3 {
+			color: #ffffff;
+			letter-spacing: 0.15em;
+			text-transform: uppercase;
+			margin: 0;
+			font-size: 18px;
+		}
+
+	}
+
 	.navbar-header {
 		.navbar-toggle {
 			border: none;
@@ -37,7 +49,7 @@ nav {
 			padding: 11px 15px;
 			img {
 				width: 100%;
-				max-width: 75px;
+				// max-width: 75px;
 			}
 		}
 	}
@@ -103,15 +115,16 @@ nav {
 		background-size:cover;
   	background-position:center;
   	// background-color: rgba(209, 18, 66, 1);
-  	height: 190px;
+  	height: 175px;
   	.navbar-header {
-  		width: 150px;
+  		// width: 150px;
+			margin-right: 15px;
   		position: relative;
   		z-index: 1;
   		.navbar-brand {
   			width: 100%;
   			img {
-  				width: 130px;
+  				width: 120px;
   				padding-top: 15px;
   			}
   		}
@@ -151,7 +164,7 @@ nav {
 	}
 
 	.navbar-form {
-		margin-top: 100px;
+		margin-top: 80px;
 		margin-bottom: 0px;
 		.form-control {
 			width: 200px;
