--- a/development/terminalfour/src/sass/newsroomHomepage/responsive-overrides.scss
+++ b/development/terminalfour/src/sass/newsroomHomepage/responsive-overrides.scss
@@ -1,39 +1,131 @@
-@media only screen and (max-width: 1395px) {
-	.newsroom-nav-container {
-		.navbar-left {
-			.navbar-form {
 
-				.form-control {
+// Large screen and bigger breakpoint
+@media only screen and (min-width: 1200px) {
+	body { padding-top: 150px; };
 
+		.newsroom-mobile-container {
+
+					font-weight: 700;
+					background: url("./../media/newsroom-redesign/red-header-background.png");
+					background-size:cover;
+			  	background-position:center;
+			  	// background-color: rgba(209, 18, 66, 1);
+			  	height: 175px;
+			  	.navbar-header {
+			  		// width: 150px;
+						margin-right: 15px;
+			  		position: relative;
+			  		z-index: 1;
+			  		.navbar-brand {
+			  			width: 100%;
+			  			img {
+			  				width: 120px;
+			  				padding-top: 15px;
+			  			}
+			  		}
+			  	}
+				.navbar-nav {
+					h3 {
+						color: #ffffff;
+						letter-spacing: 0.15em;
+						text-transform: uppercase;
+						margin: 0;
+						padding-top: 30px;
+						padding-bottom: 20px;
+						font-size: 25px;
+					}
+					padding-top: 22px;
+					padding-bottom: 22px;
+					// top: 50px;
+					position: relative;
+					z-index: 1;
+					// padding-left: 55px;
 				}
-			}
-		}
-	}
-}
+				.collapse.navbar-collapse {
+					padding: 0px 0px;
+					padding-bottom: 0px;
+				}
+				li {
+					padding-right: 60px;
+				}
+				li a {
+					font-size: 16px;
+					color: #ffffff !important;
+					padding-left: 0px ;
+					padding-right: 0px ;
+					letter-spacing: 0.075em;
+					text-decoration: none;
+					text-transform: uppercase;
+				}
 
-@media only screen and (max-width: 1333px) {
-	.newsroom-nav-container {
-		.navbar-form {
-			.form-control {
-				width: 18vw;
+				.navbar-form {
+					margin-top: 80px;
+					margin-bottom: 0px;
+					.form-control {
+						width: 200px;
+						height: 50px;
+						border: none;
+						border-radius: 0px;
+						&:focus {
+							border-color: inherit;
+							-webkit-box-shadow: none;
+							box-shadow: none;
+						}
+					}
+				}
+				.input-group {
+					width: auto;
+					padding-top: 13px;
+					z-index: 1;
+					.input-group-btn {
+						left: 0px;
+						button.btn.btn-default {
+							height: 50px;
+							border-radius: 0px;
+							border: none;
+							span {
+								color: $msu-blue;
+							}
+						}
+					}
+				}
+
+				input.form-control[type="text"] {
+					font-family: "Gotham A", "Gotham B", "Helvetica Neue", Helvetica, Arial, sans-serif;
+					font-size: 16px;
+					text-transform: uppercase;
+					letter-spacing: 0.075em;
+				}
+
+
 			}
 		}
-		li {
-			padding-right: 30px;
-		}
-	}
-}
 
 // medium screen breakpoint
 @media only screen and (max-width: 1199px) {
+	body { padding-top: 100px; };
+
+	.navbar-brand {
+		img {
+			max-width: 75px;
+		}
+	};
 
 }
 
 // tablet screen breakpoint
 @media only screen and (max-width: 991px) {
+	body { padding-top: 100px; };
+
 	.newsroom-nav-container{
 		li {
 			padding-right: 30px;
+		}
+	}
+
+	.navbar-brand {
+		img {
+			max-width: 75px;
 		}
 	}
 
@@ -50,6 +142,7 @@
 
 // mobile screen breakpoint
 @media only screen and (max-width: 767px) {
+	body { padding-top: 60px; };
 	.top-banner {
 		display: none;
 	}
@@ -57,7 +150,7 @@
 		border: none;
 	}
 	.newsroom-nav-container{
-		background-color: $msu-blue;
+		// background-color: $msu-blue;
 		.collapse {
 			border: none;
 			background: $msu-red;
@@ -80,24 +173,6 @@
 				border: none;
 			}
 		}
-		// .navbar-header {
-		// 	button.navbar-toggle {
-		// 		&:focus {
-		// 			background-color: transparent;
-		// 		}
-		// 		border: none;
-		// 		span {
-		// 			&.icon-bar {
-		// 				width: 26px;
-		// 				height: 3px;
-		// 				background-color: #ffffff;
-		// 				& + .icon-bar {
-		// 					margin-top: 5px;
-		// 				}
-		// 			}
-		// 		}
-		// 	}
-		// }
 	}
 
 	.newsroom-mobile-container {
@@ -153,7 +228,7 @@
 	}
 	.news-hero {
 		.container {
-			top: 0px;
+			top: -22px;
 			margin-bottom: 0px;
 			.hero-tab {
 				background-color: rgba(0,0,0,1.0);
@@ -169,13 +244,11 @@
 			}
 		}
 	}
-	.article-container {
-
-	}
 }
 
 /** specific breakpoint media query being used in Exceptional Case **/
 @media only screen and (max-width: 385px) {
+	body { padding-top: 60px; };
 	.newsroom-mobile-container {
 		.navbar-form {
 			&.navbar-right {
