--- a/development/terminalfour/src/html/includes/newsroomHomepageIncludes/newsroomNav.html
+++ b/development/terminalfour/src/html/includes/newsroomHomepageIncludes/newsroomNav.html
@@ -1,7 +1,7 @@
 
 <!-- Navigation  -->
 <nav id="" class="navbar navbar-default navbar-fixed-top">
-  <div id="" class="container-fluid newsroom-mobile-container">
+  <div id="" class="container-fluid newsroom-navbar">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-2" aria-expanded="false">
