--- a/development/terminalfour/src/sass/newsroomHomepage/newsroom-nav.scss
+++ b/development/terminalfour/src/sass/newsroomHomepage/newsroom-nav.scss
@@ -12,7 +12,7 @@ nav {
 }
 
 /* mobile nav bar styling */
-.newsroom-mobile-container {
+.newsroom-navbar {
 	background: $msu-red;
 	font-weight: 700;
 	height: 100px;
@@ -219,4 +219,13 @@ nav {
 	width:100%;
 	height:100%;
 	opacity:0.8;
+}
+
+
+
+.newsroom-navbar-change, .navbar-brand img, .navbar-brand-change img, .navbar-form {
+  	-webkit-transition: all 0.5s ease-in-out;
+  	-moz-transition: all 0.5s ease-in-out;
+  	-o-transition: all 0.5s ease-in-out;
+  	transition: all 0.5s ease-in-out;
 }
