--- a/www-root/includes/newsroomHomepageIncludes/newsroomNav.html
+++ b/www-root/includes/newsroomHomepageIncludes/newsroomNav.html
@@ -13,7 +13,7 @@
       <a href="#" class="navbar-brand">
         <img id="" src="style-assets/media/newsroom-redesign/red_logo.svg" alt="Newsroom Logo" style="float:left">
         <!-- <img id="" src="<t4 type="media" formatter="path/*" id="149184" />" alt="RED Logo" style="float:left"> -->
-        <!-- <bold>R</bold>elevant. <bold>E</bold>ssential. <bold>D</bold>enver. -->
+          <!-- <h3 id="nav-h3" class="visible-xs"><bold>R</bold>elevant. <bold>E</bold>ssential. <bold>D</bold>enver.</h3> -->
       </a>
 
     </div>
@@ -21,9 +21,29 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="navbar-collapse-2">
       <ul id="" class="nav navbar-nav navbar-left">
-        <h3 id="nav-h3"><bold>R</bold>elevant. <bold>E</bold>ssential. <bold>D</bold>enver.</h3>
-        <li><a href="/all-stories" class="underline-link">All Stories</a></li>
-        <li style="padding-right: 0px;"><a href="/topics" class="underline-link">Trending Topics</a></li>
+        <h3 id="nav-h3" class="hidden-xs hidden-sm"><bold>R</bold>elevant. <bold>E</bold>ssential. <bold>D</bold>enver.</h3>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle underline-link" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">All Stories <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="/2018">2018</a></li>
+            <li><a href="/2017">2017</a></li>
+          </ul>
+        </li>
+        <li class="dropdown"><a href="#" class="dropdown-toggle underline-link" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Trending Topics <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="/arts-and-culture">Arts and culture</a></li>
+            <li><a href="/athletics">Athletics</a></li>
+            <li><a href="/aviation-and-aerospace">Aviation and Aerospace</a></li>
+            <li><a href="/business-and-economics">Business and economics</a></li>
+            <li><a href="/cybersecurity">Cybersecurity</a></li>
+            <li><a href="/education">Education</a></li>
+            <li><a href="/health-and-wellness">Health and wellness</a></li>
+            <li><a href="/hospitality-and-tourism">Hospitality and tourism</a></li>
+            <li><a href="/politics-and-policy">Politics and policy</a></li>
+            <li><a href="/science-and-technology">Science and technology</a></li>
+          </ul>
+        </li>
+
       </ul>
       <form id="" class="navbar-form navbar-right">
         <div class="input-group">
