--- a/development/terminalfour/src/html/includes/newsroomHomepageIncludes/newsroomHomepageHero.html
+++ b/development/terminalfour/src/html/includes/newsroomHomepageIncludes/newsroomHomepageHero.html
@@ -3,8 +3,8 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12 col-lg-8 col-lg-offset-2 hero-tab text-center">
-				<h2>Overcoming Bullies</h2>
-				<h3>Student overcomes years of harassment, finds community at MSU Denver and shares a powerful message of hope.</h3>
+				<h1>Overcoming Bullies</h1>
+				<h2>Student overcomes years of harassment, finds community at MSU Denver and shares a powerful message of hope.</hh2>
 			</div>
 		</div>
 	</div>
