--- a/development/terminalfour/src/sass/newsroomHomepage/newsroom-hero.scss
+++ b/development/terminalfour/src/sass/newsroomHomepage/newsroom-hero.scss
@@ -1,8 +1,7 @@
 .news-hero {
 	img {
 		width: 100%;
-		// exact height specified on full width image from delivered specs
-		max-height: 1258px;
+		max-height: 1000px;
 		object-fit: cover;
 		object-position: center center;
 		display: block;
@@ -14,17 +13,20 @@
 		color: #ffffff;
 		position: relative;
 		top: -161px;
-		// negative margin cancels out the whitespace from relative positioning
 		margin-bottom: -161px;
 		.hero-tab {
 			letter-spacing: 0.15em;
 			background-color: rgba(0,0,0,0.8);
 			padding-bottom: 20px;
-			h2 {
-				font-size: 26px;
+			h1 {
+				font-size: 24px !important;
 				font-weight: 700;
-				padding: 15px 0px;
-				// margin: 0px;
+				// padding: 5px 0px;
+			}
+			h2 {
+				font-size: 14px;
+				font-weight: 700;
+				padding: 5px 0px;
 			}
 			h3 {
 				font-weight: 400;
@@ -32,19 +34,6 @@
 				padding-bottom: 20px;
 				margin: 0px;
 			}
-			// h4 {
-			// 	margin: 0px;
-			// 	padding: 20px 0px;
-			// 	line-height: 1.5em;
-			// }
 		}
-		// .description-tab {
-		// 	background-color: $msu-blue;
-		// 	p {
-		// 		padding: 40px 0px;
-		// 		font-weight: 700;
-		// 		margin-bottom: 0px;
-		// 	}
-		// }
 	}
 }
