--- a/www-root/includes/newsroomHomepageIncludes/newsroomFooter.html
+++ b/www-root/includes/newsroomHomepageIncludes/newsroomFooter.html
@@ -24,22 +24,22 @@
 					<img src="style-assets/media/newsroom-redesign/msu-denver-informal-footer-logo.svg" alt="">
 					<div class="row icon-links">
 						<div class="col-xs-2">
-							<a href="https://www.facebook.com/msudenver"><span class="fa fa-facebook-f fa-2x"></span></a>
+							<a alt="Linked In MSU Denver site" href="https://www.linkedin.com/company/metropolitan-state-university-of-denver" target="_blank" aria-label="Linkedin Icon"><span role="presentation" class="fa fa-linkedin fa-2x"></span></a>
 						</div>
 						<div class="col-xs-2">
-							<a href="http://twitter.com/msudenver"><span class="fa fa-twitter fa-2x"></span></a>
+							<a alt="Twitter MSU Denver site" href="http://twitter.com/msudenver" target="_blank" aria-label="Twitter Icon"><span role="presentation" class="fa fa-twitter fa-2x"></span></a>
 						</div>
 						<div class="col-xs-2">
-							<a href="https://instagram.com/msu_denver"><span class="fa fa-instagram fa-2x"></span></a>
+							<a alt="Facebook MSU Denver site" href="https://www.facebook.com/msudenver" target="_blank" aria-label="Facebook Icon"><span role="presentation" class="fa fa-facebook-f fa-2x"></span></a>
+						</div>			
+						<div class="col-xs-2">
+							<a alt="Instagram MSU Denver site" href="https://instagram.com/msu_denver" target="_blank" aria-label="Instagram Icon"><span role="presentation" class="fa fa-instagram fa-2x"></span></a>
 						</div>
 						<div class="col-xs-2">
-							<a href="https://www.linkedin.com/company/metropolitan-state-university-of-denver"><span class="fa fa-linkedin fa-2x"></span></a>
+							<a alt="Flick MSU Denver site" href="http://www.flickr.com/photos/msudenver/sets/" target="_blank" aria-label="Flickr Icon"><span role="presentation" class="fa fa-flickr fa-2x"></span></a>
 						</div>
 						<div class="col-xs-2">
-							<a href="http://www.flickr.com/photos/msudenver/sets/"><span class="fa fa-flickr fa-2x"></span></a>
-						</div>
-						<div class="col-xs-2">
-							<a href="http://www.youtube.com/user/msudenver"><span class="fa fa-youtube fa-2x"></span></a>
+							<a alt="YouTube MSU Denver site" href="http://www.youtube.com/user/msudenver" target="_blank" aria-label="YouTube Icon"><span role="presentation" class="fa fa-youtube fa-2x"></span></a>
 						</div>
 					</div>
 				</div>
